Auto Complete width
Made changes to the width of the auto complete content, I want the auto complete background to adjust.

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body{
 
 }
 
+/* Located underneath the input text box (go and check elements) */
 .autocomplete-content{
     position:absolute;
     width:100%;
