--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,9 @@ body{
 .autocomplete-content{
     position:absolute;
     width:100%;
-    text-align:center;
-    
+    text-align:center;    
+}
+
+.section-follow .fa-4x{
+    margin:10px 10px;
 }
